Add Contact page. Rename Project 1 (Home).html to Home.html.Renamed Yana's pic.jpg to Yana's_pic.jpg. Modify styles.css

--- a/Home.html
+++ b/Home.html
@@ -13,21 +13,23 @@
   </head>
 <body>
    
-<div class="container">
+<div class="container-fluid">
    </nav>
     <ul class="nav justify-content-end">
-    <li class="nav-item btn-light"><a class="nav-link" href="#">Home</a>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Home</a>
     <li class="nav-item"> 
         <a class="nav-link" href="#">About Me</a>
     <li class="nav-item"> 
-        <a class="nav-link" href="#">Contact Me</a>
+        <a class="nav-link" href="#">Contact</a>
         <li class="nav-item"> 
         <a class="nav-link" href="#">Empty</a>
-    </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h--><br><br><br><br></br>
+    </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h-->
+</nav><br><br><br><br></br>
     <div class="row">
       <div class="col-sm-7"><h1 style="color:white;">Hello,<br>  I am <span style="color:rgb(91, 72, 173)">Yana Park</span>, <br> Front End Developer</h1>
-        <p>Lately, I’ve discovered my passion for the world of web development and the beauty behind building useful websites. I’m skilled in HTML, CSS, and JavaScript, and I’m now looking for a junior dev position to finally kick start my career and learn among professionals.”</p></div>
-    <div class="col-sm-5"><img src="Yana's pic.jpg" class="rounded-circle" alt="Photo of Yana" style="width:500px">
+        <p></p></div>
+    <div class="col-sm-5"><img src="Yana's_pic.jpg" class="rounded-circle" alt="Photo of Yana" style="width:500px">
     </div>
         <div>
     </div>
