Change color of Heading updating style sheet. Changed H1 position to center.

--- a/Contact_Me.html
+++ b/Contact_Me.html
@@ -25,13 +25,10 @@
         <a class="nav-link" href="#">Empty</a>
     </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h--></nav>
     <br><br><br><br></br>
-    <h1 style="color:blueviolet";>Contact Me</h1>
-    <div class="row">
-      <div class="col-sm-7"><h1 style="color:white;">Hello,<br>  I am <span style="color:rgb(91, 72, 173)">Yana Park</span>, <br> Front End Developer</h1>
-        <p></p></div>
-    <div class="col-sm-5">
-    </div>
-        <div>
+    <h1 class="text-center">Contact Me</h1> <!--https://www.w3schools.com/bootstrap4/bootstrap_typography.asp#gsc.tab=0-->
+</div>
+<div class="form-group">
+
     </div>
         
 </body>
