Add Name, Email, Tel, Inquiry fields and Submit Button

--- a/Contact_Me.html
+++ b/Contact_Me.html
@@ -26,10 +26,22 @@
     </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h--></nav>
     <br><br><br><br></br>
     <h1 class="text-center">Contact Me</h1> <!--https://www.w3schools.com/bootstrap4/bootstrap_typography.asp#gsc.tab=0-->
+    <br>
+    <form action="/action_page.php" class="was-validated"></form>
+</div class="row">
+<div class="col" style="color:aliceblue">
+    <label for="name">Your Name:</label>
+    <input type="Name" class="form-control" placeholder="Eg. John Smith" name="uname" required>
+    <label for="email">Your Email:</label>
+    <input type="email" class="form-control" placeholder="Enter email" id="email">
+    <label for="telephone#">Your Telephone #:</label>
+    <input type="tel" class="form-control" placeholder="Enter your telephone#" id="tel">
+    <label for="name">Your Inquiry:</label>
+    <input type="Name" class="form-control" placeholder="How can I help you?">
+    <button type="submit" class="btn btn-primary">Submit</button>
 </div>
-<div class="form-group">
-
-    </div>
+</div> 
+</form>
         
 </body>
 </html>
