Create a form on Contact Me page.

--- a/Contact_Me.html
+++ b/Contact_Me.html
@@ -31,17 +31,17 @@
 </div class="row">
 <div class="col" style="color:aliceblue">
     <label for="name">Your Name:</label>
-    <input type="Name" class="form-control" placeholder="Eg. John Smith" name="uname" required>
+    <input type="Name" class="form-control" placeholder="Eg. John Smith" name="uname" required> <br>
     <label for="email">Your Email:</label>
-    <input type="email" class="form-control" placeholder="Enter email" id="email">
+    <input type="email" class="form-control" placeholder="Enter email" id="email"> <br>
     <label for="telephone#">Your Telephone #:</label>
-    <input type="tel" class="form-control" placeholder="Enter your telephone#" id="tel">
+    <input type="tel" class="form-control" placeholder="Enter your telephone#" id="tel"> <br>
     <label for="name">Your Inquiry:</label>
-    <input type="Name" class="form-control" placeholder="How can I help you?">
+    <input type="Name" class="form-control" placeholder="How can I help you?"> <br>
     <button type="submit" class="btn btn-primary">Submit</button>
 </div>
 </div> 
-</form>
+</form><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_form_validation_was&stacked=h-->
         
 </body>
 </html>
