--- a/Contact_Me.html
+++ b/Contact_Me.html
@@ -14,7 +14,7 @@
 <body>
    
 <div class="container-fluid">
-   <nav class="nav">
+   <nav>
     <ul class="nav justify-content-end">
     <li <a class="nav-link" href="#">Home</a>
     <li class="nav-item"> 
@@ -25,7 +25,7 @@
         <a class="nav-link" href="#">Empty</a>
     </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h--></nav>
     <br><br><br><br></br>
-    <h1 class="text-center">Contact Me</h1> <!--https://www.w3schools.com/bootstrap4/bootstrap_typography.asp#gsc.tab=0-->
+    <h1 class="text-center">Contact Me</h1> <!--https://www.w3schools.com/bootstrap4/bootstrap_typography.asp#gsc.tab=0--><!--Change h1 color-->
     <br>
    
     <div class="container-fluid">
