--- a/Home.html
+++ b/Home.html
@@ -14,7 +14,7 @@
 <body>
    
 <div class="container-fluid">
-   </nav>
+   <nav>
     <ul class="nav justify-content-end">
     <li class="nav-item">
         <a class="nav-link" href="#">Home</a>
