Change postion of the h1 to the center of the column

--- a/Contact_Me.html
+++ b/Contact_Me.html
@@ -16,13 +16,18 @@
 <div class="container-fluid">
    <nav>
     <ul class="nav justify-content-end">
-    <li <a class="nav-link" href="#">Home</a>
+    <li>
+        <a class="nav-link" href="#">Home</a>
+    </li> 
     <li class="nav-item"> 
         <a class="nav-link" href="#">About Me</a>
+    </li> 
     <li class="nav-item"> 
         <a class="nav-link" href="#">Contact</a>
+    </li> 
         <li class="nav-item"> 
         <a class="nav-link" href="#">Empty</a>
+    </li> 
     </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h--></nav>
     <br><br><br><br></br>
     <h1 class="text-center">Contact Me</h1> <!--https://www.w3schools.com/bootstrap4/bootstrap_typography.asp#gsc.tab=0--><!--Change h1 color-->
