--- a/About.html
+++ b/About.html
@@ -15,7 +15,7 @@
    
 <div class="container-fluid">
    <nav>
-    <ul class="nav justify-content-end">
+    <ul class="nav navbar justify-content-end">
         <li>
             <a class="nav-link" href="#">Home</a>
         </li> 
