--- a/Contact_Me.html
+++ b/Contact_Me.html
@@ -15,7 +15,7 @@
    
 <div class="container-fluid">
    <nav>
-    <ul class="nav justify-content-end">
+    <ul class="nav navbar justify-content-end">
     <li>
         <a class="nav-link" href="#">Home</a>
     </li> 
@@ -30,7 +30,7 @@
     </li> 
     </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h--></nav>
     <br><br><br><br></br>
-    <h1 class="text-center">Contact Me</h1> <!--https://www.w3schools.com/bootstrap4/bootstrap_typography.asp#gsc.tab=0--><!--Change h1 color-->
+    <h1 class="text-center" >Contact Me</h1> <!--https://www.w3schools.com/bootstrap4/bootstrap_typography.asp#gsc.tab=0--><!--Change h1 color-->
     <br>
    
     <div class="container-fluid">
