--- a/Home.html
+++ b/Home.html
@@ -12,10 +12,9 @@
    
   </head>
 <body>
-   
 <div class="container-fluid">
    <nav>
-    <ul class="nav justify-content-end">
+     <ul class="nav navbar justify-content-end">
         <li>
             <a class="nav-link" href="#">Home</a>
         </li> 
@@ -29,14 +28,13 @@
             <a class="nav-link" href="#">Empty</a>
         </li>
     </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h-->
-</nav><br><br><br><br></br>
+</nav><br><br><br><br><br>
     <div class="row">
-      <div class="col-sm-7"><br><br><br><br>
+      <div class="col-sm-7"><br><br><br><br><br>
         <h1 class="text-center" style="color:white;">Hello,<br>  I am <span style="color:rgb(91, 72, 173)">Yana Park</span>, <br> Front End Developer</h1><!--https://getbootstrap.com/docs/5.0/utilities/text/-->
         </div>
     <div class="col-sm-5"><img src="Yana's_pic.jpg" class="rounded-circle" alt="Photo of Yana" style="width:500px">
     </div>
-        <div>
     </div>
         
 </body>
