Link menu items to pages

--- a/About.html
+++ b/About.html
@@ -17,18 +17,19 @@
    <nav>
     <ul class="nav navbar justify-content-end">
         <li>
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="Home.html">Home</a>
         </li> 
         <li class="nav-item"> 
-            <a class="nav-link" href="#">About Me</a>
+            <a class="nav-link" href="About.html">About Me</a>
         </li> 
         <li class="nav-item"> 
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="Contact_Me.html">Contact</a>
         </li> 
             <li class="nav-item"> 
-            <a class="nav-link" href="#">Empty</a>
+            <a class="nav-link" href="Empty.html">Empty</a>
         </li>
     </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h-->
+    <!--https://stackoverflow.com/questions/24420080/change-navbar-text-color-bootstrap-->
 </nav><br><br><br><br></br>
     <div class="row h-100 justify-content-lg-center align-items-center">
       <div class="col-10 col-md-8 col-lg-6"><!--https://azmind.com/bootstrap-align-center/--> <!--Position the form in the center-->
