--- a/Contact_Me.html
+++ b/Contact_Me.html
@@ -17,18 +17,20 @@
    <nav>
     <ul class="nav navbar justify-content-end">
     <li>
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="Home.html">Home</a>
     </li> 
     <li class="nav-item"> 
-        <a class="nav-link" href="#">About Me</a>
+        <a class="nav-link" href="About.html">About Me</a>
     </li> 
     <li class="nav-item"> 
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="Contact_Me.html">Contact</a>
     </li> 
         <li class="nav-item"> 
-        <a class="nav-link" href="#">Empty</a>
+        <a class="nav-link" href="Empty.html">Empty</a>
     </li> 
-    </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h--></nav>
+    </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h-->
+<!--https://stackoverflow.com/questions/24420080/change-navbar-text-color-bootstrap-->
+    </nav>
     <br><br><br><br></br>
     <h1 class="text-center" >Contact Me</h1> <!--https://www.w3schools.com/bootstrap4/bootstrap_typography.asp#gsc.tab=0--><!--Change h1 color-->
     <br>
