--- a/Home.html
+++ b/Home.html
@@ -16,18 +16,19 @@
    <nav>
      <ul class="nav navbar justify-content-end">
         <li>
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="Home.html">Home</a>
         </li> 
         <li class="nav-item"> 
-            <a class="nav-link" href="#">About Me</a>
+            <a class="nav-link" href="About.html">About Me</a>
         </li> 
         <li class="nav-item"> 
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="Contact_Me.html">Contact</a>
         </li> 
             <li class="nav-item"> 
-            <a class="nav-link" href="#">Empty</a>
+            <a class="nav-link" href="Empty.html">Empty</a>
         </li>
     </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h-->
+    <!--https://stackoverflow.com/questions/24420080/change-navbar-text-color-bootstrap-->
 </nav><br><br><br><br><br>
     <div class="row">
       <div class="col-sm-7"><br><br><br><br><br>
