Move h1 of About page above the row and change its postion to center

--- a/About.html
+++ b/About.html
@@ -31,9 +31,10 @@
     </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h-->
     <!--https://stackoverflow.com/questions/24420080/change-navbar-text-color-bootstrap-->
 </nav><br><br><br><br></br>
+    <h1 class="text-center">About Me</h1><br><br>
     <div class="row h-100 justify-content-lg-center align-items-center">
       <div class="col-10 col-md-8 col-lg-6"><!--https://azmind.com/bootstrap-align-center/--> <!--Position the form in the center-->
-        <h1>About Me</h1><br><br>
+        
         <p class="text-left" style="color:white;">I'm a front-end web developer with a background in computer systems and network infrastructure. Currently, I am learning webdevlopment at People Learning BootCamp. I am passionate about coding and solving problems through code, and I am excited to work alongside other amazing programmers and learn so much more!</p><!--https://getbootstrap.com/docs/5.0/utilities/text/-->
         </div>
     
