--- a/Home.html
+++ b/Home.html
@@ -32,7 +32,7 @@
 </nav><br><br><br><br><br>
     <div class="row">
       <div class="col-sm-7"><br><br><br><br><br>
-        <h1 class="text-center" style="color:white;">Hello,<br>  I am <span style="color:rgb(91, 72, 173)">Yana Park</span>, <br> Front End Developer</h1><!--https://getbootstrap.com/docs/5.0/utilities/text/-->
+        <h2 class="text-center" style="color:white;">Hello,<br>  I am <span style="color:rgb(91, 72, 173)">Yana Park</span>, front-end web developer. Currently, I am learning web devlopment through People Learning platform. I am passionate about coding and solving problems through code, and I am excited to work alongside other amazing programmers and learn so much more!</h2><!--https://getbootstrap.com/docs/5.0/utilities/text/-->
         </div>
     <div class="col-sm-5"><img src="Yana's_pic.jpg" class="rounded-circle" alt="Photo of Yana" style="width:500px">
     </div>
