Update text in <p> in About page

--- a/About.html
+++ b/About.html
@@ -35,7 +35,7 @@
     <div class="row h-100 justify-content-lg-center align-items-center">
       <div class="col-10 col-md-8 col-lg-6"><!--https://azmind.com/bootstrap-align-center/--> <!--Position the form in the center-->
         
-        <p class="text-left" style="color:white;">I'm a front-end web developer with a background in computer systems and network infrastructure. Currently, I am learning webdevlopment at People Learning BootCamp. I am passionate about coding and solving problems through code, and I am excited to work alongside other amazing programmers and learn so much more!</p><!--https://getbootstrap.com/docs/5.0/utilities/text/-->
+        <p class="text-left" style="color:white;"> I am a front-end developer currently located in the United Kingdom. I have worked in many different fields, but I always had interest in web development. I am passionate about coding and like solving problems through code, and I am excited to work alongside other amazing developers to get more experience and knowledge!</p><!--https://getbootstrap.com/docs/5.0/utilities/text/-->
         </div>
     
         <div>
