Fix length of animated separator--line in all pages

--- a/About.html
+++ b/About.html
@@ -30,23 +30,22 @@
         </li>
     </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h-->
     <!--https://stackoverflow.com/questions/24420080/change-navbar-text-color-bootstrap-->
-</nav><br><br><br><br>
+</nav><br><br><br>
         <div class="container">
-        <div class="row">
+        <div class="row gx-lg-5">
           <div class="col"><br>
             <h1 class="text-left">About Me</h1>
             <hr class="separator--line"> <!--https://www.youtube.com/watch?v=STqW8mppEic-->
-            <p class="text-justify pl-4" style="color:white;"> I am a front-end developer currently located in the United Kingdom. I have worked in many different fields, but I always had interest in web development. I am passionate about coding and like solving problems through code, and I am excited to work alongside other amazing developers to get more experience and knowledge!</p><!--https://getbootstrap.com/docs/5.0/utilities/text/-->
+            <p class="text-left" style="color:white;"> I am a front-end developer currently located in the United Kingdom. I have worked in many different fields, but I always had interest in web development. I am passionate about coding and like solving problems through code, and I am excited to work alongside other amazing developers to get more experience and knowledge!</p><!--https://getbootstrap.com/docs/5.0/utilities/text/-->
           </div> <!--https://getbootstrap.com/docs/5.0/layout/grid/-->
           <div class="col">
-            <h1 class="text-left p-4">Education</h1>
+            <h1 class="text-left p-3">Education</h1>
             <hr class="separator--line"> <!--https://www.youtube.com/watch?v=STqW8mppEic-->
-            <p class="text-left" style="color:white;"><span class="text-uppercase"><strong>University of Maryland Global Campus</strong></span> <br> BS in Human Resources Mangement</p> <!--https://www.w3schools.com/bootstrap/bootstrap_ref_css_text.asp-->
-            <p class="text-left" style="color:white;"><span class="text-uppercase"><strong>Learning People Platform</strong></span> <br> Web Development</p>
-            <br>
-            <h1 class="text-left">Skills</h1>
+            <p class="text-left p-3" style="color:white;"><span class="text-uppercase"><strong>University of Maryland Global Campus</strong></span> <br> BS in Human Resources Mangement</p> <!--https://www.w3schools.com/bootstrap/bootstrap_ref_css_text.asp-->
+            <p class="text-left p-3" style="color:white;"><span class="text-uppercase"><strong>Learning People Platform</strong></span> <br> Web Development</p>
+            <h1 class="text-left p-3">Skills</h1>
             <hr class="separator--line"><!--https://www.youtube.com/watch?v=STqW8mppEic-->
-            <p class="text-left" style="color:white;">WordPress, HTML, CSS, <br>JavaScript, Bootstrap</p>
+            <p class="text-left p-3" style="color:white;">WordPress, HTML, CSS, <br>JavaScript, Bootstrap</p>
           </div>
         </div>
     </div>
