--- a/Contact_Me.html
+++ b/Contact_Me.html
@@ -32,10 +32,10 @@
 <!--https://stackoverflow.com/questions/24420080/change-navbar-text-color-bootstrap-->
     </nav>
     <br><br><br><br></br>
-    <h1 class="text-center" >Contact Me</h1> <!--https://www.w3schools.com/bootstrap4/bootstrap_typography.asp#gsc.tab=0--><!--Change h1 color-->
-    <br>
    
     <div class="container-fluid">
+        <h1 class="text-center" >Contact Me</h1> <!--https://www.w3schools.com/bootstrap4/bootstrap_typography.asp#gsc.tab=0--><!--Change h1 color-->
+        <hr class="separator--line2">
         <div class="row h-100 justify-content-center align-items-center">
         <div class="col-10 col-md-8 col-lg-6"> <!--https://azmind.com/bootstrap-align-center/--> <!--Position the form in the center-->
     <form action="/action_page.php" class="was-validated">
