--- a/Home.html
+++ b/Home.html
@@ -33,6 +33,8 @@
     <div class="row">
       <div class="col-sm-7"><br><br><br><br>
         <h2 class="text-center" style="color:white;">Hello,<br>  I am <span style="color:rgb(91, 72, 173)">Yana Park</span>, front-end web developer.<br> I enjoy creating websites.</h2><!--https://getbootstrap.com/docs/5.0/utilities/text/-->
+        <br>
+        <hr class="separator--line1"> <!--https://www.w3docs.com/snippets/css/how-to-style-a-horizontal-line.html-->
         </div>
     <div class="col-sm-5"><img src="Yana's_pic.jpg" class="rounded-circle" alt="Photo of Yana" style="width:500px">
     </div>
