Change the size and color of button on the Contact Me page

--- a/Contact_Me.html
+++ b/Contact_Me.html
@@ -47,7 +47,7 @@
     <input type="tel" class="form-control" placeholder="Enter your telephone#" id="tel" required> <br>
     <label for="name">Your Inquiry:</label>
     <input type="Name" class="form-control" placeholder="How can I help you?" required> <br>
-    <button type="submit" class="btn btn-secondary">Submit</button>
+    <button type="submit" class="btn btn-secondary btn-lg">Submit</button>
 </form><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_form_validation_was&stacked=h-->
 </div>
 </div> 
