Add a footer on Home page. Decrease space between the <nav> and <div>.

--- a/Home.html
+++ b/Home.html
@@ -29,7 +29,7 @@
         </li>
     </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h-->
     <!--https://stackoverflow.com/questions/24420080/change-navbar-text-color-bootstrap-->
-</nav><br><br><br><br><br>
+</nav><br><br><br>
     <div class="row">
       <div class="col-sm-7"><br><br><br><br>
         <h2 class="text-center" style="color:white;">Hello,<br>  I am <span style="color:rgb(91, 72, 173)">Yana Park</span>, front-end web developer.<br> I enjoy creating websites.</h2><!--https://getbootstrap.com/docs/5.0/utilities/text/-->
@@ -39,6 +39,9 @@
     <div class="col-sm-5"><img src="Yana's_pic.jpg" class="rounded-circle" alt="Photo of Yana" style="width:500px">
     </div>
     </div>
-        
+    <footer>
+        <p>Author: Yana Park<br><!--https://www.w3schools.com/tags/tag_footer.asp-->
+        <a href="mailto:yanna73kr@gmail.com">yanna73kr@gmail.com</a></p>
+      </footer>   
 </body>
 </html>
