Add footer to About and Contact_Me pages. Reduce space between <nav> and <div>.

--- a/About.html
+++ b/About.html
@@ -30,10 +30,10 @@
         </li>
     </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h-->
     <!--https://stackoverflow.com/questions/24420080/change-navbar-text-color-bootstrap-->
-</nav><br><br><br>
+</nav><br>
         <div class="container">
         <div class="row gx-lg-5">
-          <div class="col"><br>
+          <div class="col"><br><br><br><br>
             <h1 class="text-left">About Me</h1>
             <hr class="separator--line"> <!--https://www.youtube.com/watch?v=STqW8mppEic-->
             <p class="text-left" style="color:white;"> I am a front-end developer currently located in the United Kingdom. I have worked in many different fields, but I always had interest in web development. I am passionate about coding and like solving problems through code, and I am excited to work alongside other amazing developers to get more experience and knowledge!</p><!--https://getbootstrap.com/docs/5.0/utilities/text/-->
@@ -51,6 +51,9 @@
     </div>
    <div>
 </div>
-        
+<footer>
+  <p>Author: Yana Park<br><!--https://www.w3schools.com/tags/tag_footer.asp-->
+  <a href="mailto:yanna73kr@gmail.com">yanna73kr@gmail.com</a></p>
+</footer>     
 </body>
 </html>
