--- a/Contact_Me.html
+++ b/Contact_Me.html
@@ -31,7 +31,7 @@
     </ul><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_nav&stacked=h-->
 <!--https://stackoverflow.com/questions/24420080/change-navbar-text-color-bootstrap-->
     </nav>
-    <br><br><br><br></br>
+    <br><br>
    
     <div class="container-fluid">
         <h1 class="text-center" >Contact Me</h1> <!--https://www.w3schools.com/bootstrap4/bootstrap_typography.asp#gsc.tab=0--><!--Change h1 color-->
@@ -50,8 +50,10 @@
     <button type="submit" class="btn btn-secondary btn-lg">Submit</button>
 </form><!--https://www.w3schools.com/bootstrap4/tryit.asp?filename=trybs_form_validation_was&stacked=h-->
 </div>
-</div> 
-
-        
+</div> <br><br>
+<footer>
+    <p>Author: Yana Park<br><!--https://www.w3schools.com/tags/tag_footer.asp-->
+    <a href="mailto:yanna73kr@gmail.com">yanna73kr@gmail.com</a></p>
+  </footer>         
 </body>
 </html>
